crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_t_tuple_end.snap
---
source: crates/nash-report/src/syntax/variants.rs
description: "f : (int, int "
---
nash::syntax::unclosed_delimiter

  × Expected `)` to close `(`.
   ╭─[src/Main.nash:1:15]
 1 │ f : (int, int 
   ·     ┬         ┬
   ·     │         ╰── expected `)`
   ·     ╰── opened here
   ╰────
  help: Add `)` here.
