crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_t_tuple_indent_end.snap
---
source: crates/nash-report/src/syntax/variants.rs
description: "f : (int, int\n)"
---
nash::syntax::indentation

  × Closing `)` is underindented.
   ╭─[src/Main.nash:2:1]
 1 │ f : (int, int
   ·     ┬
   ·     ╰── opened here
 2 │ )
   · ┬
   · ╰── underindented closing delimiter
   ╰────
  help: Indent `)` to continue this construct.
