crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_t_tuple_indent_repr.snap
---
source: crates/nash-report/src/syntax/variants.rs
expression: "render_plain(&report, &source, \"src/Main.nash\")"
---
  × Expected a representation bound after `:`.
   ╭─[src/Main.nash:1:3]
 1 │ f = value
   ·   ─
   ╰────
  help: Add a bound such as `Storable`, indented inside the parentheses.
