crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_t_tuple_indent_type1.snap
---
source: crates/nash-report/src/syntax/variants.rs
expression: "render_plain(&report, &source, \"src/Main.nash\")"
---
nash::syntax

  × Expected an indented tuple element type.
   ╭─[src/Main.nash:1:3]
 1 │ f = value
   ·   ─
   ╰────
  help: Add a type inside the parentheses; separate elements with commas.
