crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_t_tuple_indent_type_n.snap
---
source: crates/nash-report/src/syntax/variants.rs
description: "f : (int,\nint)"
---
nash::syntax

  × Expected an indented tuple element type.
   ╭─[src/Main.nash:2:1]
 1 │ f : (int,
 2 │ int)
   · ─
   ╰────
  help: Add a type inside the parentheses; separate elements with commas.
