crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_t_tuple_repr.snap
---
source: crates/nash-report/src/syntax/variants.rs
description: "f : ('a : 1)"
---
nash::syntax

  × Expected a representation bound.
   ╭─[src/Main.nash:1:11]
 1 │ f : ('a : 1)
   ·           ─
   ╰────
  help: Use `Big`, `Const`, `Term`, `Storable`, or `Little`.
