crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_t_tuple_space.snap
---
source: crates/nash-report/src/syntax/variants.rs
description: "f : (\tint, int)"
---
nash::syntax

  × Tabs are not allowed.
   ╭─[src/Main.nash:1:6]
 1 │ f : (   int, int)
   ·      ───
   ╰────
  help: Replace the tab with spaces.
