crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_t_tuple_type.snap
---
source: crates/nash-report/src/syntax/variants.rs
expression: "render_plain(&report, &source, \"src/Main.nash\")"
---
  × Expected a type in the annotation for `f`.
   ╭─[src/Main.nash:1:3]
 1 │ f = value
   ·   ─
   ╰────
  help: Write a type name or a quoted type variable, such as `'a`.
