crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_test_binder_alignment.snap
---
source: crates/nash-report/src/syntax/variants.rs
description: "prop \"name\" = let\n    x via generate\n  y via generate\n    in do"
---
nash::syntax

  × Property input bindings must align.
   ╭─[src/Main.nash:3:3]
 1 │ prop "name" = let
 2 │     x via generate
 3 │   y via generate
   ·   ─
 4 │     in do
   ╰────
  help: Start each binding in column 5.
